# bevy-playground

./: AGENTS.md  Cargo.toml
assets/: Y_bot.gltf
src/: camera.rs  cursor.rs  level.rs  main.rs  player.rs
