[package]
name = "bevy_playground"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = { version = "0.6", features = ["debug-plugin"] }
bevy = { version = "0.18.1", features = ["dynamic_linking"] }


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
